# personal-website

./: .gitignore  .gitmodules  README.md  config.toml  pyproject.toml
content/about/: _index.md
content/blog/: _index.md
content/blog/2022-10-05-Make Your Own Website Using Hugo and Netlify/: index.md
content/blog/2022-10-06-Getting Out of Academia and Into Tech Without a Hard Sciences Degree/: index.md
content/blog/2022-11-14-Reproducibility-Reproducibility-Reproducibility-Data-Science/: index.md
content/blog/2022-11-14-Reproducibility-Reproducibility-Reproducibility-My-Data-Science-Set-Up/: index.md
content/blog/Make Your Own Website Using Hugo and Netlify/: index.md
content/blog/test/: index.md
content/findMe/: _index.md
i18n/: en.yaml
layouts/: 404.html  index.html
layouts/_default/: baseof.html  list.html  single.html  taxonomy.html
layouts/_default/partials/: navigation.html
layouts/partials/: analytics-gtag.html  head.html  navigation.html  profile.html
notebooks/: 2022-10-05-Make Your Own Website Using Hugo and Netlify.ipynb  2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb  Make Your Own Website Using Hugo and Netlify.ipynb  index.md  test.ipynb
static/css/: style.css
themes/beautifulhugo/: theme.toml
themes/beautifulhugo/content/post/: 2015-02-20-test-markdown.md
themes/beautifulhugo/layouts/_default/: baseof.html
themes/beautifulhugo/layouts/partials/: footer.html  header.html  load-photoswipe-theme.html
themes/beautifulhugo/static/js/: mermaid.js  (+4 more)
themes/hugo-theme-mini/i18n/: en.yaml
(+14 files in other folders)
