[tool.poetry]
name = "website-source"
version = "0.1.0"
description = ""
authors = ["William Kye <williamkye93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = "5.6.1"
traitlets = "4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
